@@ -1,26 +1,25 @@
 package br.com.jhonatan.personalcontrolmobile.controller;
 
 import android.app.Activity;
-import android.app.ListActivity;
 import android.content.Context;
 import android.os.AsyncTask;
 import android.os.Bundle;
 import android.view.View;
+import android.view.ViewGroup;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
 import android.widget.CheckBox;
 import android.widget.EditText;
-import android.widget.ListAdapter;
 import android.widget.ListView;
 import android.widget.Spinner;
+import android.widget.TextView;
 import android.widget.Toast;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 
 import br.com.jhonatan.personalcontrolmobile.R;
 import br.com.jhonatan.personalcontrolmobile.dto.Categoria;
@@ -34,13 +33,12 @@ import br.com.jhonatan.personalcontrolmobile.service.CadastrosGeraisService;
 public class DespesaActivity extends Activity {
 
     private CadastrosGeraisService service = new CadastrosGeraisService();//TODO injeção de dependencias
-    Despesa d = new Despesa();
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.content_list_despesa);
-        new ListarDespesas((ListView) findViewById(R.id.listaDespesas)).execute("http://personalcontrol-rdgs.rhcloud.com/despesaApi/listarDespesas");
+        new ListarDespesas((ListView) findViewById(R.id.listaDespesas)).execute("http://personalcontrol-rdgs.rhcloud.com/despesaApi/listarUltimasDespesas");//TODO
     }
 
 
@@ -62,25 +60,18 @@ public class DespesaActivity extends Activity {
     }
 
     public void preencherLista(ListView listview, List<Despesa> itens) {//TODO
-//        String[] values = new String[] { "Android", "iPhone", "WindowsMobile",
-//                "Blackberry", "WebOS", "Ubuntu", "Windows7", "Max OS X",
-//                "Linux", "OS/2", "Ubuntu", "Windows7", "Max OS X", "Linux",
-//                "OS/2", "Ubuntu", "Windows7", "Max OS X", "Linux", "OS/2",
-//                "Android", "iPhone", "WindowsMobile" };
-
         final StableArrayAdapter adapter = new StableArrayAdapter(this, android.R.layout.simple_list_item_1, itens);
         listview.setAdapter(adapter);
         listview.setOnItemClickListener(new AdapterView.OnItemClickListener() {
 
             @Override
             public void onItemClick(AdapterView<?> parent, final View view, int position, long id) {
-                final String item = (String) parent.getItemAtPosition(position);
-                Toast.makeText(view.getContext(), item + " selected", Toast.LENGTH_LONG).show();
+                final Despesa item = (Despesa) parent.getItemAtPosition(position);
+                Toast.makeText(view.getContext(), item.getDescricao() + " selected", Toast.LENGTH_LONG).show();
             }
 
         });
     }
-
 
     public void salvar(View v) {
         try {
@@ -92,17 +83,12 @@ public class DespesaActivity extends Activity {
             CheckBox fixa = (CheckBox) findViewById(R.id.fixa);
             EditText parcelas = (EditText) findViewById(R.id.parcelas);
 
-            SimpleDateFormat df = new SimpleDateFormat("dd/MM/yyyy");
+            SimpleDateFormat df = new SimpleDateFormat("dd/MM/yyyy", new Locale("pt-BR"));
 
-            d.setCategoria((Categoria) categoria.getSelectedItem());
-            d.setData(df.parse(data.getText().toString()));
-            d.setDescricao(descricao.getText().toString());
-            d.setFixa(fixa.isChecked());
-            d.setId(null);
-            d.setMetodoPagamento((MetodoPagamento) metodoPg.getSelectedItem());
-            d.setTotalParcelas(Integer.valueOf(parcelas.getText().toString()));
-            d.setValorTotal(new Double(valor.getText().toString()));
-            new SalvarDespesa().execute("http://192.168.100.5:8080/personalcontrol/despesaApi/salvarDespesa");
+            Despesa despesa = new Despesa(descricao.getText().toString(), Double.valueOf(valor.getText().toString()), (Categoria) categoria.getSelectedItem(),
+                    (MetodoPagamento) metodoPg.getSelectedItem(), df.parse(data.getText().toString()), fixa.isChecked(), Integer.valueOf(parcelas.getText().toString()));
+
+            new SalvarDespesa(despesa).execute("http://192.168.100.5:8080/personalcontrol/despesaApi/salvarDespesa");
         } catch (ParseException e) {
             e.printStackTrace();
         }
@@ -162,9 +148,15 @@ public class DespesaActivity extends Activity {
 
     class SalvarDespesa extends AsyncTask<String, Void, Despesa> {
 
+        private Despesa despesa;
+
+        public SalvarDespesa(Despesa despesa) {
+            this.despesa = despesa;
+        }
+
 
         protected Despesa doInBackground(String... serviceUrl) {
-            return service.salvarDespesa(d, serviceUrl[0]);
+            return service.salvarDespesa(this.despesa, serviceUrl[0]);
         }
 
         protected void onPostExecute(Despesa lista) {
@@ -177,11 +169,14 @@ public class DespesaActivity extends Activity {
 
         HashMap<Despesa, Integer> mIdMap = new HashMap<Despesa, Integer>();
 
+        List<Despesa> despesas;
+
         public StableArrayAdapter(Context context, int textViewResourceId, List<Despesa> objects) {
             super(context, textViewResourceId, objects);
             for (int i = 0; i < objects.size(); ++i) {
                 mIdMap.put(objects.get(i), i);
             }
+            despesas = objects;
         }
 
         @Override
@@ -191,9 +186,41 @@ public class DespesaActivity extends Activity {
         }
 
         @Override
+        public View getView(int position, View convertView, ViewGroup parent) {
+            ViewHolder holder;
+
+            if (convertView == null) {
+                convertView = getLayoutInflater().inflate(R.layout.simple_list_item_1,parent,false);
+                // inflate custom layout called row
+                holder = new ViewHolder();
+                holder.tv =(TextView) convertView.findViewById(R.id.firstLine);
+                holder.tv2 =(TextView) convertView.findViewById(R.id.secondLine);
+                // initialize textview
+                convertView.setTag(holder);
+            }
+            else
+            {
+                holder = (ViewHolder)convertView.getTag();
+            }
+            Despesa in = despesas.get(position);
+            holder.tv.setText(in.getDescricao());
+            SimpleDateFormat df = new SimpleDateFormat("dd/MM/yyyy", new Locale("pt-BR"));
+            holder.tv2.setText(df.format(in.getData()));
+            // set the name to the text;
+
+            return convertView;
+        }
+
+        @Override
         public boolean hasStableIds() {
             return true;
         }
 
     }
+
+    static class ViewHolder {
+        TextView tv;
+        TextView tv2;
+    }
+
 }
